<resources>
    <string name="app_name">HearthstoneCards</string>

    <string name="cards_toolbar_title">All cards</string>
    <string name="cards_menu_search_text">Search</string>
    <string name="cards_bottom_sheet_type_text">Filter</string>

    <string name="card_detail_set">Set: %1$s</string>
    <string name="card_detail_type">Type: %1$s</string>
    <string name="card_detail_faction">Faction: %1$s</string>
    <string name="card_detail_rarity">Rarity: %1$s</string>
    <string name="card_detail_cost">Cost: %1$s</string>
    <string name="card_detail_player_class">Player Class: %1$s</string>

    <string name="error_title">Oops, something went wrong</string>
    <string name="error_description">Try again</string>

    <string name="auth_toolbar_title">My account</string>
    <string name="auth_email_hint">E-mail</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_sign_in_text">Sign in</string>
    <string name="auth_sign_up_text">Sign up</string>
    <string name="auth_logout_text">Logout</string>

    <string name="favorites_toolbar_title">Favorites</string>
</resources>